[package]
name = "prux"
version = "2.0.0"
authors = ["richerarc <richer.arc@gmail.com>", "LucFauvel <luc.fauvel@hotmail.com>"]
edition = "2018"

[dependencies]
tokio = {version = "0.2.6", features = ["macros", "tcp", "rt-core", "stream"]}
futures-util = "0.3.1"
futures = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
config = {version = "0.9.3", features = ["toml"]}
log = "0.4.8"
env_logger = "0.6.2"
clap = "2.33.0"
dns-lookup = "1.0.1"
hyper = "0.13.1"
hyper-tls = "0.4.0"
parking_lot = "0.10.0"
httparse = "1.3.4"
base64 = "0.11.0"
bytes = "0.5.3"
regex = "1.3.1"