[package]
name = "prux"
version = "2.1.2"
authors = ["richerarc <richer.arc@gmail.com>", "LucFauvel <luc.fauvel@hotmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["cargo"] }
config = { version = "0.15.13", features = ["toml"] }
dns-lookup = "2.0.4"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
httparse = "1.10.1"
hyper = { version = "1.6.0", features = ["server", "client", "http1", "http2"] }
hyper-tls = "0.6.0"
log = "0.4"
parking_lot = "0.12.4"
priority-queue = "2.5.0"
regex = "1.11.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
